option('EGL', type : 'boolean', value : false, description : 'If targeting an EGL device')
option('PANDORA', type : 'boolean', value : false, description : 'If targeting an OpenPandora')
option('ODROID', type : 'boolean', value : false, description : 'If targeting an Odroid')
option('MUPENPLUSAPI', type : 'boolean', value : false, description : 'For compiling Mupen64Plus plugin')
option('MUPENPLUSAPI_GLIDENUI', type : 'boolean', value : false, description : 'For compiling GLideNUI for Mupen64Plus')
option('MESA', type : 'boolean', value : false, description : 'Disable Raspberry Pi autodetection')
option('VERO4K', type : 'boolean', value : false, description : 'If targeting a Vero4k')
option('ANDROID', type : 'boolean', value : false, description : 'If targeting an Android device')
option('GL_PROFILE', type : 'boolean', value : false, description : 'to turn on GL profiling')
option('VEC4_OPT', type : 'boolean', value : false, description : 'to turn on Vec4 Optimizations')
option('CRC_ARMV8', type : 'boolean', value : false, description : 'to turn on CRC Optimization for ARMv8')
option('CRC_OPT', type : 'boolean', value : false, description : 'to turn on CRC Optimization')
option('CRC_NEON', type : 'boolean', value : false, description : 'to turn on CRC Optimization for NEON')
option('NEON_OPT', type : 'boolean', value : false, description : 'to turn on NEON Optimization')
option('X86_OPT', type : 'boolean', value : false, description : 'to turn on X86 Optimization')
option('NO_ASSERT', type : 'boolean', value : true, description : 'to turn off assert()')
option('NOHQ', type : 'boolean', value : true, description : 'Disable using GLideNHQ')
option('x64', type : 'boolean', value : false, description : 'Build for x64 architecture', yield : true)
